循环语句、双重for循环

--- a/JS-操作CSS.html
+++ b/JS-操作CSS.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS操作</title>
+  <title>js操作CSS</title>
   <style>
     div {
       width: 100px;
