--- a/变量和数据类型/JS数据类型.html
+++ b/变量和数据类型/JS数据类型.html
@@ -9,10 +9,13 @@
 
 <body>
   <script>
-    let arr = [12, 33, 'walking', { name: 'lisi' }];
+    let arr = [['one', 'two'], 12, { age: 18 }, 'walking', { name: 'lisi' }];
     for (let i = 0; i < arr.length; i++) {
-      console.log(typeof arr[i])
+      // console.log(typeof arr[i])
+      console.log();
     }
+
+
 
   </script>
 </body>
