--- a/6-双重for循环/JS-99乘法表.html
+++ b/6-双重for循环/JS-99乘法表.html
@@ -36,6 +36,8 @@
       document.write('<br>')
     }
 
+
+    // 控制台输出
     var str = '';
     for (var i = 1; i <= 9; i++) {
       for (var j = 1; j <= i; j++) {
