--- a/8-函数/为什么需要函数.html
+++ b/8-函数/为什么需要函数.html
@@ -31,8 +31,8 @@
 
     // 下面开始使用 函数 来实现 大量代码的重复使用
     function getSum(num1, num2) {
-      let sum = 0;
-      for (let i = num1; i <= num2; i++) {
+      var sum = 0;
+      for (var i = num1; i <= num2; i++) {
         sum += num1;
       }
       console.log(sum);
