--- a/2-输入和输出语句/JS输入和输出.html
+++ b/2-输入和输出语句/JS输入和输出.html
@@ -10,13 +10,14 @@
 <body>
   <script>
 
-    var name = prompt('请输入姓名？');
-    alert('欢迎' + name + "回来！");
+    let uname = prompt('请输入您的姓名：');
+    let age = prompt('请输入您的年龄：');
+    alert(`大家好，我叫 ${uname}，我今年贵庚 ${age} 岁了`)
+
 
     var num = confirm('确定取消吗？');
     alert(num);   // true
 
-    
 
   </script>
 </body>
