仅修改目录

--- a/1-初始JavaScript/JS-体验.html
+++ b/1-初始JavaScript/JS-体验.html
@@ -7,7 +7,7 @@
   <title>点击按钮，按钮变粉红色</title>
   <style>
     .pink {
-      background-color: pink;
+      background-color: yellow;
     }
   </style>
 </head>
@@ -33,6 +33,7 @@
       })
 
     }
+
   </script>
 </body>
 
