--- a/JS-操作CSS.html
+++ b/JS-操作CSS.html
@@ -7,9 +7,9 @@
   <title>js操作CSS</title>
   <style>
     div {
-      width: 100px;
+      width: 200px;
       height: 100px;
-      background-color: yellow;
+      background-color: pink;
     }
   </style>
 </head>
@@ -19,11 +19,14 @@
 
   <script>
 
+
     let divStyle = document.querySelector('div').style;
 
     divStyle.width = '300px';
     divStyle.height = '300px';
     divStyle.backgroundColor = 'green';
+
+    // #endregion
 
   </script>
 </body>
