匿名函数的两种方式：函数表达式、立即执行函数

--- a/JS-操作CSS.html
+++ b/JS-操作CSS.html
@@ -16,17 +16,16 @@
 
 <body>
   <div></div>
+  <section class="box"></section>
 
   <script>
-
+    // 利用 js 改写 css样式
 
     let divStyle = document.querySelector('div').style;
 
     divStyle.width = '300px';
     divStyle.height = '300px';
     divStyle.backgroundColor = 'green';
-
-    // #endregion
 
   </script>
 </body>
