分析 Error 错误对象、try...catch...finally三者之间的执行顺序

--- a/9-函数/16-逻辑中断和参数的默认值.html
+++ b/9-函数/16-逻辑中断和参数的默认值.html
@@ -40,12 +40,12 @@
 
     let age = 18;
 
-    console.log(false && age++);   // false  age++就不执行，&& 是 一假则假
+    console.log(false && age++);   // false ，&& 是 一假则假， 故 age++ 就不执行
 
     console.log(age);   // 18
 
 
-    console.log(true || age++);   // true   age++就不执行， || 是 一真则真
+    console.log(true || age++);   // true  ， || 是 一真则真 ，故 age++ 就不执行
 
     console.log(age);   // 18
 
