修改 对象部分 demo的名称

--- a/11-对象/11-for...in循环.html
+++ b/11-对象/11-for...in循环.html
@@ -16,6 +16,9 @@
       sex: '男',
       fn: function () {
         console.log('我是obj对象')
+      },
+      fn2: function () {
+        console.log('我是obj2对象')
       }
     }
 
