--- a/9-函数/1-为什么需要函数.html
+++ b/9-函数/1-为什么需要函数.html
@@ -9,7 +9,8 @@
 
 <body>
   函数的主要作用 就是可以使得 大量代码 的 重复使用。<br>
-  虽然 for、while、do...while 等循环语句 也能实现一些简单的重复操作，但是 比较 具有局限性，此时我们就可以使用 JS中的函数。
+  虽然 for、while、do...while 等循环语句 也能实现一些简单的重复操作， <br>
+  但是 比较 具有局限性，此时我们就可以使用 JS中的函数。 <br>
 
   <script>
     //  求 1 - 10 之间所有数的和 ？
