--- a/Date日期对象/1-创建日期对象(实例化).html
+++ b/Date日期对象/1-创建日期对象(实例化).html
@@ -8,22 +8,29 @@
 </head>
 
 <body>
+
   <script>
-    // 获取当前系统时间
+
+    // 获取 当前系统时间
     let now = new Date();
 
-    document.write(now + '<br>');   // Mon Aug 28 2023 20:43:20 GMT+0800 (中国标准时间)
+    document.write( now + '<br>');   // Mon Aug 28 2023 20:43:20 GMT+0800 (中国标准时间)
 
-    document.write(now.getFullYear() + '<br>');   // 2023
-    document.write(now.getMonth() + 1 + '<br>');  // 8 , 月份从 0 开始，所以需要 + 1
-    document.write(now.getDate() + '<br>');   // 日期 28号
-    document.write(now.getDay() + '<br>');    // 星期几  0 - 6  
+    document.write( now.getFullYear() + '<br>');   // 2023  获取年份 
+
+    document.write( now.getMonth() + 1 + '<br>');  // 8   获取月份  , 月份从 0 开始，所以需要 + 1
+
+    document.write( now.getDate() + '<br>');   // 28号  获取日期 
+
+    document.write( now.getDay() + '<br>');    // 星期一   获取星期几  0 - 6  
 
     // 获取指定时间
     let shiyi = new Date('2023-10-1');
-    document.write(shiyi);   // Sun Oct 01 2023 00:00:00 GMT+0800 (中国标准时间)
+
+    document.write( shiyi );   // Sun Oct 01 2023 00:00:00 GMT+0800 (中国标准时间)
 
   </script>
+
 </body>
 
 </html>
