--- a/Date日期对象/秒杀倒计时.html
+++ b/Date日期对象/秒杀倒计时.html
@@ -11,6 +11,7 @@
       display: block;
       width: 250px;
       height: 200px;
+      line-height: 70px;
       text-align: center;
       color: #fff;
       background-color: red;
@@ -32,7 +33,7 @@
 
 <body>
   <div>
-    <h3>BTC 超低价折扣</h3>
+    <h2>BTC 超低抄底价</h2>
     <span class="dates"></span>
     <span class="hours"></span>
     <span class="minutes"></span>
