--- a/Date日期对象/3-嵌入模块的时钟.html
+++ b/Date日期对象/3-嵌入模块的时钟.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>嵌入页面的时钟</title>
+  <link rel="stylesheet" href="./clock.css">
 </head>
 
 <body>
