--- a/11-对象/8.1-新增、修改对象属性.html
+++ b/11-对象/8.1-新增、修改对象属性.html
@@ -26,7 +26,7 @@
     console.log(obj4);    // {name: 'zhangsan', age: 18, sayHi: ƒ}
 
 
-    // 修改属性 、方法
+    // 动态修改属性 、方法
 
     obj4.name = 'walking';
 
