--- a/Math对象/任意范围的随机数生成函数.html
+++ b/Math对象/任意范围的随机数生成函数.html
@@ -4,26 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>任意范围的随机数生成函数</title>
 </head>
 
 <body>
   <script>
 
-    // 任意范围的随机数生成函数:
+    // 任意范围 的 随机数 生成 函数:
     function getRandomArbitrary(min, max) {
       return Math.random() * (max - min) + min;
     }
 
     getRandomArbitrary(1.5, 6.5)  // 1.6556636580428883
-
-
-    // 任意范围的随机整数生成函数 :
-    function getRandomInt(min, max) {
-      return Math.floor(Math.random() * (max - min + 1)) + min;
-    }
-
-    getRandomInt(1, 6) // 4
 
   </script>
 </body>
