更换目录顺序名

--- a/11-object 对象/10-in运算符.html
+++ b/11-object 对象/10-in运算符.html
@@ -10,7 +10,8 @@
 <body>
   <script>
 
-    // in运算符用于检查对象是否包含某个属性（注意，检查的是 键名，不是键值），如果包含就返回true，否则返回false。
+    // in 运算符 用于 检查对象 是否 包含某个属性（注意，检查的是 键名，不是 键值），
+    // 如果包含，就返回true，否则返回false。
 
     // let obj = { s: 1 };
 
@@ -19,7 +20,7 @@
     // in 运算符 的 一个问题是，它不能识别哪些属性 是 对象自身的，哪些属性 是 继承的。
 
     var obj = {};
-    
+
     'toString' in obj;        // true
 
   </script>
