--- a/打console.log()描述需清晰.html
+++ b/打console.log()描述需清晰.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>打console.log( )描述需清晰</title>
 </head>
 
 <body>
