分析 正则表达式 regular expression

--- a/15-String对象/indexOf()根据字符返回位置.html
+++ b/15-String对象/indexOf()根据字符返回位置.html
@@ -76,11 +76,11 @@
     console.log('JavaScript'.indexOf('k'));      // -1
 
 
-    // let string = "Helloworld!";
+    let string = "Helloworld!";
 
-    // let index = string.indexOf("world");
+    let index1 = string.indexOf("world");
 
-    // console.log(index);  // 输出：5
+    console.info(index1);  // 输出：5
 
 
 
