--- a/断点调试/断点调试.html
+++ b/断点调试/断点调试.html
@@ -9,9 +9,34 @@
 
 <body>
   <script>
-    let num = 10;
-    num = num + 1;
-    console.log(num);
+
+    let arr = [1, 2, 3, 4, 5]
+
+    for (let i = 0; i < arr.length; i++) {
+
+      if (arr[i] < 4) debugger;
+
+      console.log(arr[i]);
+
+    }
+
+
+    // var str = '';
+
+    // for (var i = 1; i <= 9; i++) {
+
+    //   for (var j = 1; j <= i; j++) {
+
+    //     str += j + 'x' + i + '=' + j * i + '\t';
+
+    //   }
+
+    //   str += '\n';
+
+    // }
+
+    // console.log(str);
+
   </script>
 </body>
 
