分析web API 中 DOM对象

--- a/18-RegularExpression对象/repalce()过滤敏感词.html
+++ b/18-RegularExpression对象/repalce()过滤敏感词.html
@@ -6,9 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>过滤敏感词</title>
 </head>
+
 <body>
+
   <textarea name="" id="" cols="30" rows="10"></textarea>
+
   <button>发布</button>
+
   <div></div>
 
   <script>
@@ -18,8 +22,12 @@
           比如 ：walking 老师上课 很有 **
 
             分析：
+
             1、用户输入内容，获取 用户输入内容
+
             2、对 用户输入内容 进行 正则替换查找，找到敏感词，进行 ** 替换
+               比如： 激情、基情、骚气 等等 都进行 ** 替换
+
             3、要 全局替换 使用修饰符 g 
     */
 
@@ -33,7 +41,7 @@
 
       // console.log(tx.value);
 
-      div.innerHTML = tx.value.replace(/骚气|激情|基情/ig, '**');
+      div.innerHTML = tx.value.replace(/激情|基情|骚气/ig, '**');
 
       tx.value = '';
 
