--- a/渲染出table内部结构.html
+++ b/渲染出table内部结构.html
@@ -25,8 +25,9 @@
 </head>
 
 <body>
+  
   <table>
-    <h3>小米成绩表</h3>
+    <h3>小明成绩表</h3>
     <tr>
       <th>编号</th>
       <th>科目</th>
@@ -59,9 +60,6 @@
 
       document.write(`
           <tr>
-              <td colspan="4">暂无数据</td>
-          </tr>
-          <tr>
             <td colspan="4">
               <span>总分:  ${total}</span> &nbsp;&nbsp;
               <span>平均分: ${average}</span>
@@ -69,6 +67,7 @@
           </tr>
       `)
     </script>
+
   </table>
 </body>
 
