修改部分注释描述

--- a/14-Array对象/slice( ) 提取目标数组的一部分.html
+++ b/14-Array对象/slice( ) 提取目标数组的一部分.html
@@ -12,8 +12,11 @@
     let arr = ['walking', 1, { age: 18 }, [2, 3]];
 
     // slice(): 用于 提取 目标数组的一部分元素，返回一个新数组，不会改变 原数组.
-    // arr.slice(start,end); 第一个参数为起始位置（从0开始），第二个参数为终止位置（但该位置的元素本身不包括在内）。
-    // 如果省略第二个参数，则一直返回到原数组的最后一个成员。
+
+    // slice ( 复制的起始位置(从0开始),复制到的结束位置(不包含结束位置的数)); 
+
+    // 如果省略第二个参数，则一直复制到原数组的最后一个成员，然后 返回一个新数组，这个新数组中包含从原数组中复制到的元素。
+
     console.log(arr.slice(0, 2));  // ['walking', 1]
 
 
@@ -27,7 +30,7 @@
     console.log(arr1);  // [1, 13, 4, 7, 77] 
     // 按理是 [1, 4, 7, 13, 77] ，结果是 [1, 13, 4, 7, 77] ?
     // 是因为 数值 会被先 转成 字符串，再按照 字典顺序 进行比较，进行顺序。
-    
+
 
     arr1.sort(function (a, b) {
 
