--- a/21-DOM文档对象模型/学生信息表/学生信息表案例.html
+++ b/21-DOM文档对象模型/学生信息表/学生信息表案例.html
@@ -163,7 +163,7 @@
 
         // 得到当前元素的自定义属性 data-id
         // console.log(e.target.dataset.id)
-        // 删除 arr数组 里面 对应的数据
+        // 删除 arr数组 里面 对应的数据    会改变原数组
         // splice( 删除的起始位置(从0开始), 被删除的元素个数 )
         arr.splice(e.target.dataset.id, 1);
 
