--- a/8-数组/数组的增删改查API语法.html
+++ b/8-数组/数组的增删改查API语法.html
@@ -34,15 +34,40 @@
     document.write(arr + '<br>')   // [7,8,9,10,20,30,40,50,60,70,80]
 
     // splice() 删除 数组的一部分元素 
-    arr.splice(0, 3);   // 第一个参数为起始位置（从0开始），第二个参数为终止位置（但该位置的元素本身不包括在内）
+    // 第一个参数为，第二个参数为终止位置（但该位置的元素本身不包括在内）
+    // splice(删除的起始位置（从0开始），被删除的元素个数)
+    arr.splice(0, 3);
     document.write(arr + '<br>')   // [10,20,30,40,50,60,70,80]
 
     // slice() 提取目标数组的一部分元素，返回一个新数组，原数组不变。
-    let arr2 = arr.slice(0, 2);  // 第一个参数为起始位置（从0开始），第二个参数为终止位置（但该位置的元素本身不包括在内）
+    // slice ( 复制的起始下标(从0开始) ,结束下标(不包含结束下标的数))
+    let arr2 = arr.slice(0, 2);
     document.write(arr2)  // [10,20] 
 
+
+  /**
+    *  第一种  concat()添加内容
+    *  添加内容可以是数组(用于取出参数对象中的所有可遍历元素，添加到当前对象之中)
+  */
+  let numbers = [1, 2, 3]
+  let numbers1 = [4, 5, 6]
+  console.log(numbers.concat(numbers1)); // [ 1, 2, 3, 4, 5, 6 ]
+
+  /**
+   *  第二种  扩展运算符...
+   *  添加内容可以是数组(用于取出参数对象中的所有可遍历元素，添加到当前对象之中)
+  */
+  let numbers2 = [1, 2, 3]
+  let numbers3 = [4, 5, 6]
+  numbers2 = [...numbers2, ...numbers3]
+  console.log(numbers2); // [ 1, 2, 3, 4, 5, 6 ]
+
+
+
+
+
   </script>
-  
+
 </body>
 
 </html>
