综合案例： 学生就业统计表

--- a/22-BOM浏览器对象模型/综合案例-学生统计表/forEach()和map()和join().html
+++ b/22-BOM浏览器对象模型/综合案例-学生统计表/forEach()和map()和join().html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>forEach()和map()和join()</title>
 </head>
 
 <body>
@@ -135,6 +135,15 @@
 
 
     // join() 方法 用于 把 数组中的所有元素 转换成 一个字符串。
+
+  </script>
+
+  <script>
+
+    // join（） 方法 用于 把 数组中的所有元素 转换成 一个字符串。
+    // join() 方法 接收 一个参数 作为 参数，
+    // 该 参数 是一个 字符串，用于分隔数组元素。
+
 
   </script>
 
