--- a/18-RegularExpression对象/1-正则实例方法- test() 和 exec().html
+++ b/18-RegularExpression对象/1-正则实例方法- test() 和 exec().html
@@ -49,8 +49,31 @@
 
     console.log(regex.lastIndex);    // 13
 
+  </script>
 
 
+  <script>
+
+    // 1、通过调用 RegExp对象的构造函数 创建正则表达式
+
+    let regexp = new RegExp(/123/);
+
+    console.log(regexp);   // /123/
+
+    // test() 方法 用来检测字符串是否符合正则表达式要求的规范
+    console.log(regexp.test(123));  // true  测试正则表达式 test
+
+
+    //2 、利用 字面量 创建正则表达式
+
+    let rg = /123/;
+
+    console.log(rg);    // /123/
+
+    // test() 方法 用来检测字符串是否符合正则表达式要求的规范
+    console.log(rg.test(123));  // true
+
+    console.log(rg.test('abc'));  // false
 
   </script>
 </body>
