--- a/18-RegularExpression对象/小兔鲜注册登录案例/index.html
+++ b/18-RegularExpression对象/小兔鲜注册登录案例/index.html
@@ -1223,12 +1223,8 @@
   <script>
 
     // 1、从登录页面跳转过来之后，自动显示用户名
+
     //   最好写个渲染函数，因为一会退出还需要用到
-
-    // 如果 本地存储 中 读取 本地存储 的 “用户名” 数据，
-    // 需要 把 用户名 写到 xtx_navs 中 的 第一个li 里面
-    // 因为 登录了，所以 xtx_navs 中 的 第二个li 里面 的 文字 变为 ‘退出登录’
-
 
     // 1.1 获取 第一个 li 和 第二个 li
     const li1 = document.querySelector('.xtx_navs li:first-child');
@@ -1241,7 +1237,7 @@
       const xtxUname = localStorage.getItem('xtx-uname');
 
       if (xtxUname) {
-        li1.innerHTML = `<a href="javascript:;"><i class="iconfont icon-user">${xtxUname}</i></a>`
+        li1.innerHTML = `<a href="javascript:;"><i class="iconfont icon-user">${xtxUname}</i></a>`;
         li2.innerHTML = `<a href="javascript:;">退出登录</a>`;
       } else {
         li1.innerHTML = `<a href="./login.html">请先登录</a>`;
@@ -1258,7 +1254,7 @@
       //  删除 本地存储中 对应的 “用户名” 数据，
       localStorage.removeItem('xtx-uname');
 
-      //  重新调用 渲染函数 ，则 复原默认的结构
+      //  重新调用 渲染函数 ，复原默认的结构
       renderName();
 
     })
