提高 可读性

--- a/30-Set数据结构/分析Set数据结构.html
+++ b/30-Set数据结构/分析Set数据结构.html
@@ -9,25 +9,25 @@
 
 <body>
 
-  Set 是 ES6 提供的一种新的 数据结构 ，它类似于数组，但是 成员的值 都是 唯一的，没有重复的值。
+  Set 是 ES6 提供的一种新的 数据结构 ，它类似于数组，但是 成员的值 都是 唯一的，没有重复的值。<br><br>
 
-  Set 数据结构 和 数组 的区别 ：Set 数据结构 不会 存储(添加) 重复的值。
+  Set 数据结构 和 数组 的区别 ：Set 数据结构 不会 存储(添加) 重复的值。<br><br>
 
-  Set 数据结构 的 实例对象 有以下属性：
-  1.Set.prototype.constructor：构造函数，默认就是Set函数。
-  2.Set.prototype.size：返回Set实例的成员总数。
+  Set 数据结构 的 实例对象 有以下属性：<br><br>
+  1.Set.prototype.constructor：构造函数，默认就是Set函数。<br><br>
+  2.Set.prototype.size：返回Set实例的成员总数。<br><br>
 
-  Set 数据结构 的 实例对象 有以下方法：
-  1.Set.prototype.add(value)：添加某个值，返回 Set 结构本身。
-  2.Set.prototype.delete(value)：删除某个值，返回一个布尔值，表示删除是否成功。
-  3.Set.prototype.has(value)：返回一个布尔值，表示该值是否为Set的成员。
-  4.Set.prototype.clear()：清除所有成员，没有返回值。
+  Set 数据结构 的 实例对象 有以下方法：<br><br>
+  1.Set.prototype.add(value)：添加某个值，返回 Set 结构本身。<br><br>
+  2.Set.prototype.delete(value)：删除某个值，返回一个布尔值，表示删除是否成功。<br><br>
+  3.Set.prototype.has(value)：返回一个布尔值，表示该值是否为Set的成员。<br><br>
+  4.Set.prototype.clear()：清除所有成员，没有返回值。<br><br>
 
-  Set 数据结构 的 实例对象 有四个遍历方法，可以用于遍历 成员。
-  - Set.prototype.keys()：返回 键名 的 遍历器
-  - Set.prototype.values()：返回 键值 的 遍历器
-  - Set.prototype.entries()：返回 键值对 的 遍历器
-  - Set.prototype.forEach()：使用 回调函数 遍历 每个成员
+  Set 数据结构 的 实例对象 有四个遍历方法，可以用于遍历 成员。<br><br>
+  - Set.prototype.keys()：返回 键名 的 遍历器<br><br>
+  - Set.prototype.values()：返回 键值 的 遍历器<br><br>
+  - Set.prototype.entries()：返回 键值对 的 遍历器<br><br>
+  - Set.prototype.forEach()：使用 回调函数 遍历 每个成员<br><br>
 
   <script>
 
