--- a/34-async和await/分析async.html
+++ b/34-async和await/分析async.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-  async 是 ES8 引入的一个关键字，用于 声明一个函数 为 异步函数，该 函数的执行
-  返回的结果 是 一个 Promise 对象。
+
+  async 是 ES8 引入的一个关键字，用于 声明一个函数 为 异步函数，该 函数的执行 返回的结果 是 一个 Promise 对象。
 
   <script>
 
