--- a/34-async和await/分析await.html
+++ b/34-async和await/分析await.html
@@ -9,10 +9,10 @@
 
 <body>
 
-    await 也是 一个关键字 。
-    await 必须 写在 async函数 中。
-    await 右侧 可以 放 表达式，一般为 Promise对象。
-    await 是有返回结果的，可以是 成功的Promise 或者 失败的Promise
+    await 也是 一个关键字 。 <br><br>
+    await 必须 写在 async函数 中。 <br><br>
+    await 右侧 可以 放 表达式，一般为 Promise对象。 <br><br>
+    await 是有返回结果的，可以是 成功的Promise 或者 失败的Promise <br><br>
     await 的 Promise 失败了，就会抛出异常，需要通过 try …catch 捕获处理。。
 
 
