--- a/35-class类/分析class.html
+++ b/35-class类/分析class.html
@@ -45,17 +45,27 @@
 
     // 通过class实例化对象 
 
+    // 1.类 中 的 方法名  前面不需要加上function这个关键
+
+    // 2.类 中 的 方法 与 方法之间 不需要逗号分隔，加了会报错。
+
+    // 3.类的数据类型就是函数，类本身就指向构造函数。
+
+    // 4.clas使用的时候，也是直接 对 类 使用 new命令，跟 构造函数的用法 完全一致。
+
     class Shouji {
-      // 构造方法 名字不能修改  this关键字 则代表 实例对象   当new一个实例对象时 就自调用
+
+      // 构造方法 名字 不能修改 , this关键字 则代表 实例对象,   当new一个实例对象时 就自调用
       constructor(brand, price) {
         this.brand = brand;
         this.price = price;
       }
 
-      //添加方法  前面不需要加上function这个关键字 
+      // 添加方法  前面不需要加上function这个关键字 
       call() {
         console.log('我可以打电话！');
       }
+
     }
 
     // 使用的时候，也是直接 对 类 使用 new 命令 创建 一个实例对象
@@ -66,9 +76,11 @@
     console.log(typeof Shouji);   // function
 
     // 类本身 就指向 构造函数
-    console.log(Shouji === Shouji.prototype.constructor);    // true
+    console.log(Shouji === Shouji.prototype.constructor);    // true      
 
   </script>
+
+
 
 </body>
 
